--- a/fsharpHangerManager.fsproj
+++ b/fsharpHangerManager.fsproj
@@ -2,10 +2,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net9.0</TargetFramework>
+    <TargetFrameworks>net9.0</TargetFrameworks>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="src/Domain.fs" />
+    <Compile Include="src/Helpers.fs" />
     <Compile Include="src/Program.fs" />
     <Compile Include="test/ExampleBased.fs" />
     <Compile Include="test/PropertyBased.fs" />
